Fri Apr  1 12:39:12 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:

          Specify the /implib option to be consistent with the nmake and vc7
          templates.  This allows the user to control where it goes with the
          'libout;' setting.

Fri Apr  1 07:30:50 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:

          For some project keywords, the project value will be appended to
          the template input variable of the same name (if there is one).
          See the "Project Variable and Template Input Variable Interaction"
          section of the README for more details.

        * templates/vc7.mpd:

          Only use 'link_options' if it's set.

Thu Mar 31 10:23:39 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          If -global is used and the file does not contain a path, we will
          search the include path for it.

Thu Mar 31 06:53:14 2005  Chad Elliott  <elliott_c@ociweb.com>

        * combine_dsw.pl:

          Added a new script to combine multiple dsw's into one.

        * modules/CBXProjectCreator.pm:

          Inherit from WinProjectBase to pick up the validated_directory
          method.

        * modules/VC6ProjectCreator.pm:
        * modules/WinProjectBase.pm:

          Moved the validated_directory method out of VC6ProjectCreator and
          into WinProjectBase.  Since $(...) could contain a drive letter,
          no Windows based project can have $(...) in the intermediate
          directory name.

Tue Mar 29 07:56:08 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug in the subtraction code that would remove a portion of
          an entry if only part of the existing value matched the string
          being subtracted.

        * README:
        * modules/ProjectCreator.pm: